<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:panel="http://schemas.android.com/apk/res/com.aspire.android.test.execute"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#767c9b"
    android:orientation="vertical" >

    <com.aspire.android.test.execute.ui.Panel
        android:id="@+id/topPanel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dip"
        panel:animationDuration="1000"
        panel:closedHandle="@drawable/top_switcher_collapsed_background"
        panel:linearFlying="true"
        panel:openedHandle="@drawable/top_switcher_expanded_background"
        panel:position="top" >

        <Button
            android:id="@id/panelHandle"
            android:layout_width="fill_parent"
            android:layout_height="33dip"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@id/panelContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/FrameLayout04"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/task_name"
                    android:layout_width="75dip"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/task_name" />

                <EditText
                    android:id="@+id/searchContent"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="2dip"
                    android:layout_toRightOf="@id/task_name"
                    android:hint="@string/hint_content" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/FrameLayout05"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_below="@id/FrameLayout04"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/resultSearch"
                    android:layout_width="75dip"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/index_name" />

                <EditText
                    android:id="@+id/resultsearchContent"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_toRightOf="@id/resultSearch"
                    android:hint="@string/hint_content" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/FrameLayout06"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_below="@id/FrameLayout05"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/status"
                    android:layout_width="75dip"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/test_result" />

                <Spinner
                    android:id="@+id/run_status"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_toRightOf="@id/status" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/FrameLayout07"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_below="@id/FrameLayout06"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/result"
                    android:layout_width="75dip"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/run_status" />

                <Button
                    android:id="@+id/resultsearchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:text="@string/search" />

                <Spinner
                    android:id="@+id/test_result"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_toLeftOf="@id/resultsearchButton"
                    android:layout_toRightOf="@id/result" />
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#323299"
                android:gravity="center"
                android:padding="4dip"
                android:textColor="#eee"
                android:textSize="16dip"
                android:textStyle="bold" />
        </LinearLayout>
    </com.aspire.android.test.execute.ui.Panel>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" >

        <ListView
            android:id="@+id/resultList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000"
            android:dividerHeight="3dip"
            android:fadingEdge="none" >
        </ListView>
    </LinearLayout>

</LinearLayout>