<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:panel="http://schemas.android.com/apk/res/com.aspire.android.test.execute"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#767c9b"
    android:orientation="vertical" >

    <com.aspire.android.test.execute.ui.Panel
        android:id="@+id/topPanel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dip"
        panel:animationDuration="1000"
        panel:closedHandle="@drawable/top_switcher_collapsed_background"
        panel:linearFlying="true"
        panel:openedHandle="@drawable/top_switcher_expanded_background"
        panel:position="top" >

        <Button
            android:id="@id/panelHandle"
            android:layout_width="fill_parent"
            android:layout_height="33dip" />

        <LinearLayout
            android:id="@id/panelContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/FrameLayout01"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/taskSearch"
                    android:layout_width="75dip"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/task_name" />

                <Button
                    android:id="@+id/searchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="2dip"
                    android:text="@string/search" />

                <EditText
                    android:id="@+id/searchContent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dip"
                    android:layout_toLeftOf="@id/searchButton"
                    android:layout_toRightOf="@id/taskSearch"
                    android:hint="@string/hint_content" />
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#323299"
                android:gravity="center"
                android:padding="4dip"
                android:textColor="#eee"
                android:textSize="16dip"
                android:textStyle="bold" />
        </LinearLayout>
    </com.aspire.android.test.execute.ui.Panel>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" >

        <ListView
            android:id="@+id/taskSearchList"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:cacheColorHint="#00000000"
            android:divider="@color/white"
            android:dividerHeight="3dip"
            android:fadingEdge="none" >
        </ListView>
    </LinearLayout>

</LinearLayout>